--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <section class="app-container">
     <div class="header py-4">
-        <h1>Kodowanie wiadomości Tekstowej/Binarnej</h1>
-        <!-- <h3>przejdz do kodowania wiadomości Tekstowej/Binarnej</h3> -->
+        <h1>{{'headerText' | translate | titlecase}}</h1>
     </div>
     <app-translation></app-translation>
     <section class="menu my-4">
@@ -11,3 +10,8 @@
         <app-encoding-messages></app-encoding-messages>
     </section>
 </section>
+<!-- to do: 
+    - Wraz z tym wyżej dodać kodowanie wysztykiego oraz dekodowanie danych
+    - Utworzenie części edukacyjnej (Learning i Step By Step)
+    - stylowanie mobilne
+-->
