--- a/src/app/components/encoding-messages/encoding-messages.component.html
+++ b/src/app/components/encoding-messages/encoding-messages.component.html
@@ -1,19 +1,46 @@
-<section class="d-flex align-center justify-content-center">
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
+  <section class="d-flex align-center justify-content-center">
     <div class="d-flex flex-column me-4">
-        <p-dropdown [autoDisplayFirst]="false" class="my-3" [options]="dropdownCodeList" optionLabel="name" [(ngModel)]="selectedEncode"  [showClear]="true" [placeholder]="'encodingMessagesSection.dropdownPlaceholder' | translate | titlecase "></p-dropdown>
-        <textarea rows="10" cols="80" pInputTextarea [autoResize]="true"  [(ngModel)]="encodeMessage" [placeholder]="'encodingMessagesSection.dropdownPlaceholder' | translate | titlecase"></textarea>
-      </div>
-      <p-button (onClick)="switchMessages()" class="change-button mt-5" icon="pi pi-arrow-right-arrow-left" size="large" ></p-button>
-      <div class="d-flex flex-column ms-4">
-        <p-dropdown [autoDisplayFirst]="false" class="my-3" [options]="dropdownCodeList" optionLabel="name" [(ngModel)]="selectedCoded" [showClear]="true" [placeholder]="'encodingMessagesSection.dropdownPlaceholder' | translate | titlecase"></p-dropdown>
-        <textarea [readonly]="true" rows="10" cols="80" pInputTextarea [autoResize]="true" [(ngModel)]="codedMessage" [placeholder]="'encodingMessagesSection.dropdownPlaceholder' | translate | titlecase"></textarea>
-      </div>
-</section>
-<div class="submit mt-5">
+      <p-dropdown  
+        optionLabel="name" 
+        formControlName="selectedEncode" 
+        (onChange)="changeCodedList(form.get('selectedEncode')?.value)"
+        [class]=" submit  && form.get('selectedEncode')?.invalid ? 'ng-dirty ng-invalid my-3' : 'my-3'"
+        [autoDisplayFirst]="false" 
+        [options]="dropdownCodeList" 
+        [showClear]="true" 
+        [placeholder]="'encodingMessagesSection.dropdownPlaceholder' | translate | titlecase "> </p-dropdown>
+      <textarea pInputTextarea
+        formControlName="encodeMessage"
+        rows="10" cols="80" 
+        [class]="form.get('encodeMessage')?.invalid  && submit? 'ng-dirty ng-invalid' : ''" 
+        [autoResize]="true"  
+        [placeholder]="'encodingMessagesSection.encodeTextareaPlaceholder' | translate | titlecase"></textarea>
+    </div>
+
+    <div class="d-flex flex-column ms-4">
+      <p-dropdown 
+        [class]="form.get('selectedCoded')?.invalid  && submit? 'ng-dirty ng-invalid my-3' : 'my-3'"
+        optionLabel="name" 
+        formControlName="selectedCoded" 
+        [autoDisplayFirst]="false"
+        [options]="dropdownEncodeList" 
+        [showClear]="true" 
+        [placeholder]="'encodingMessagesSection.dropdownPlaceholder' | translate | titlecase"></p-dropdown>
+      <textarea pInputTextarea
+        formControlName="codedMessage"
+        rows="10" 
+        cols="80" 
+        [readonly]="true" 
+        [autoResize]="true" ></textarea>
+    </div>
+  </section>
+  <div class="submit mt-5">
     <p-button 
-    (onClick)="codeMessage()"
-    [rounded]="true" 
+    type="submit" 
     [label]="'encodingMessagesSection.codeButton' | translate | titlecase" 
     size="large" 
     severity="success"></p-button>
 </div>
+</form>
+
