--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import "../node_modules/bootstrap/dist/css/bootstrap.min.css" layer(bootstrap);
-@import "primeng/resources/themes/lara-light-blue/theme.css";
-@import "primeng/resources/primeng.css";
+@import "bootstrap" layer(bootstrap);
+@import "primeng/resources/themes/lara-light-blue/theme.css" layer(prime);
+@import "primeng/resources/primeng.css" layer(prime);
 @import "primeicons/primeicons.css";
-
-@layer bootstrap, primeng;
+@layer prime, bootstrap;
 // * p-button button{
 //     border-radius: 6px;
 // }
