--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,5 +13,5 @@
 <!-- to do: 
     - Wraz z tym wyżej dodać kodowanie wysztykiego oraz dekodowanie danych
     - Utworzenie części edukacyjnej (Learning i Step By Step)
-    - stylowanie mobilne
+    - stylowanie mobilne (zrobione w połowie)
 -->
