--- a/src/app/components/encoding-messages/encoding-messages.component.html
+++ b/src/app/components/encoding-messages/encoding-messages.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <section class="d-flex align-center justify-content-center">
-    <div class="d-flex flex-column me-4">
+  <section class="d-flex align-center justify-content-center flex-column flex-md-row">
+    <div class="d-flex flex-column  me-4">
       <p-dropdown  
         optionLabel="name" 
         formControlName="selectedEncode" 
