--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -1,13 +1,17 @@
-.menu {
-    margin: 0 auto;
-     width: 60%;
-     background-color: #fff;
-     border-radius: 20px;
-     padding: 20px 0;
-     display: flex;
-     justify-content: center;
-     gap: 40px;
-     p-button ::ng-deep{
-        font-size: 24px;
-     }
+:host {
+   .menu {
+      margin: 0 auto;
+       width: 60%;
+       background-color: #fff;
+       border-radius: 20px;
+       padding: 20px 0;
+       justify-content: center;
+       gap: 40px;
+       p-button ::ng-deep{
+          font-size: 24px;
+       }
+  }
+  @media (min-width: 30em) {
+   
+  }
 }
