--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
 .app-container {
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   width: 100%;
   background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(59, 130, 246, 1) 50%);
   text-align: center;
