--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
     </section>
 </section>
 <!-- to do: 
-    - Wraz z tym wyżej dodać kodowanie wysztykiego oraz dekodowanie danych
+    -  dodać kodowanie wszystkiego oraz dekodowanie danych
     - Utworzenie części edukacyjnej (Learning i Step By Step)
     - stylowanie mobilne (zrobione w połowie)
 -->
