--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -19,7 +19,7 @@
 [(visible)]="stepByStepVisible" 
 (onHide)="stepByStepVisible = false">
    <div>
-
+    <app-step-by-step></app-step-by-step>
    </div>
 </p-dialog>
 <p-dialog 
