add learning section

--- a/src/app/components/encoding-messages/encoding-messages.component.html
+++ b/src/app/components/encoding-messages/encoding-messages.component.html
@@ -23,6 +23,7 @@
       <p-dropdown 
         [class]="form.get('selectedCoded')?.invalid  && submit? 'ng-dirty ng-invalid my-3' : 'my-3'"
         optionLabel="name" 
+        (onChange)="selectedCodedChange()"
         formControlName="selectedCoded" 
         [autoDisplayFirst]="false"
         [options]="dropdownEncodeList" 
