--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
     </section>
 </section>
 <!-- to do: 
-    - Utworzenie części edukacyjnej (Learning i Step By Step)
+    - Utworzenie części edukacyjnej ( Step By Step)
+    - poprawienie pdfów
     - stylowanie mobilne (zrobione w połowie)
 -->
