--- a/src/app/components/learning/text-learning/text-learning.component.html
+++ b/src/app/components/learning/text-learning/text-learning.component.html
@@ -1,45 +1,38 @@
 <div *ngIf="(combiantion.fromEncoding == TypeOfCoding.ascii && combiantion.toEncoding == TypeOfCoding.text) || (combiantion.fromEncoding == TypeOfCoding.text && combiantion.toEncoding == TypeOfCoding.ascii)" class="mx-5">
-    <p>Kodowanie jak i dekodowanie wiadomości w ASCII polega na wyszukiwaniu danych w tabeli ASCII. Na przykład słowo "Rower".</p>
-      <p>Przy kodowaniu wiadomości należy szukamy liter w tabeli będą to R: 82, o: 111, w: 119, e: 101, r: 114. Postać ASCII to 82,111,119,101,114.</p>
-     <p> Przy dekodowaniu wiadomości mamy liczby 82,111,119,101,114. Szukamy w tabeli ASCII po stronie dziesiętnej R: 82, o: 111, w: 119, e: 101, r: 114. Wychodzi słowo "Rower"</p>
+    <p>{{"learnSection.ascii" | translate}}</p>
      <ng-container *ngTemplateOutlet="tableASCII"></ng-container>
  </div>
  <div *ngIf="(combiantion.fromEncoding == TypeOfCoding.text && combiantion.toEncoding == TypeOfCoding.utf8) || (combiantion.fromEncoding == TypeOfCoding.utf8 && combiantion.toEncoding == TypeOfCoding.text)" class="mx-5">
-  <p>Kodowanie jak i dekodowanie wiadomości w Utf-8 polega na wyszukiwaniu danych w tabeli Utf-8. Na przykład słowo "Rower".</p>
-  <p>Przy kodowaniu wiadomości należy szukamy liter w tabeli będą to R: 82, o: 111, w: 119, e: 101, r: 114. Postać ASCII to 82,111,119,101,114.</p>
-  <p> Przy dekodowaniu wiadomości mamy liczby 82,111,119,101,114. Szukamy w tabeli Utf-8 po stronie dziesiętnej R: 82, o: 111, w: 119, e: 101, r: 114. Wychodzi słowo "Rower"</p>
+  <p>{{"learnSection.utf8" | translate}}</p>
     <ng-container *ngTemplateOutlet="tableUtf8"></ng-container>
  </div>
  <div *ngIf="(combiantion.fromEncoding == TypeOfCoding.text && combiantion.toEncoding == TypeOfCoding.iso8859) || (combiantion.fromEncoding == TypeOfCoding.iso8859 && combiantion.toEncoding == TypeOfCoding.text)" class="mx-5">
-  <p>Kodowanie ISO-8859  polega na dopasowaniu znaków w tekście wejściowym do odpowiadających im kodów znaków w ISO-8859-1.</p> 
-  <p>Na przykład litera "A" w UTF-8 jest reprezentowana przez pojedynczy bajt o wartości 65 (0x41 w szesnastkowym systemie liczbowym), co odpowiada także literze "A" w ISO-8859-1. </p>
-  <p>Proces konwersji polega na przejrzeniu każdego znaku w tekście wejściowym i zmapowaniu go na odpowiadający mu kod znaku w ISO-8859-1.</p> 
-  <p>Jeśli jakiś znak nie ma odpowiednika w ISO-8859-1, może wystąpić zjawisko tzw. utraty informacji, gdzie znak zostanie zastąpiony przez domyślny znak lub specjalny znak zastępczy.</p>
+  <p>{{"learnSection.iso" | translate}}</p>
   <ng-container *ngTemplateOutlet="tableISO"></ng-container>
  </div>
  <div *ngIf="(combiantion.fromEncoding == TypeOfCoding.ascii && combiantion.toEncoding == TypeOfCoding.utf8) || (combiantion.fromEncoding == TypeOfCoding.utf8 && combiantion.toEncoding == TypeOfCoding.ascii)" class="mx-5">
-    <p>Kodowanie Wiadomości z ASCII na UTF-8 jak i dekodowanie polega na szukaniu wiadomości w tablekach jednak zazwyczaj wiadomości mogą wyjść takie same dlatego że Utf-8 jest rozszerzeniem tabeli ASCII o znaki specjalne</p>
+  <p>{{"learnSection.asciiUtf8" | translate}}</p>
     <ng-container *ngTemplateOutlet="tableASCII"></ng-container>
     <ng-container *ngTemplateOutlet="tableUtf8"></ng-container>
  </div>
  <div *ngIf="(combiantion.fromEncoding == TypeOfCoding.ascii && combiantion.toEncoding == TypeOfCoding.iso8859) || (combiantion.fromEncoding == TypeOfCoding.iso8859 && combiantion.toEncoding == TypeOfCoding.ascii)" class="mx-5">
-  <p>Kodowanie Wiadomości z ASCII na ISO-8859 jak i dekodowanie polega na szukaniu wiadomości w tablekach jednak zazwyczaj wiadomości mogą wyjść takie same dlatego że ISO-8859 jest rozszerzeniem tabeli ASCII o znaki specjalne</p>
+  <p>{{"learnSection.asciiIso" | translate}}</p>
   <ng-container *ngTemplateOutlet="tableASCII"></ng-container>
   <ng-container *ngTemplateOutlet="tableISO"></ng-container>
  </div>
  <div *ngIf="(combiantion.fromEncoding == TypeOfCoding.utf8 && combiantion.toEncoding == TypeOfCoding.iso8859) || (combiantion.fromEncoding == TypeOfCoding.iso8859 && combiantion.toEncoding == TypeOfCoding.utf8)" class="mx-5">
-  <p>Kodowanie Wiadomości z ISO-8859 na UTF-8 jak i dekodowanie polega na szukaniu wiadomości w tablekach jednak zazwyczaj wiadomości mogą wyjść takie same dlatego że Utf-8 jest rozszerzeniem tabeli ISO-8859 o znaki specjalne</p>
-  <ng-container *ngTemplateOutlet="tableISO"></ng-container>
+  <p>{{"learnSection.isoUtf8" | translate}}</p>
+    <ng-container *ngTemplateOutlet="tableISO"></ng-container>
   <ng-container *ngTemplateOutlet="tableUtf8"></ng-container>
  </div>
 
  <ng-template #tableUtf8>
-  <p class="text-center">Tabela UTF-8</p>
+  <p class="text-center">{{"learnSection.tableLabels.tableUtf8" | translate}}</p>
   <div class="my-5" style="overflow-x: auto;">
       <table class="d-flex" style="max-height: 300px;">
         <tr>
-          <td style="min-width: 50px;">Kod</td>
-          <td style="min-width: 50px;">Znak</td>
+          <td style="min-width: 50px;">{{"learnSection.tableLabels.code" | translate}}</td>
+        <td style="min-width: 50px;">{{"learnSection.tableLabels.char" | translate}}</td>
         </tr>
         <tr  *ngFor="let char of utf8Table" style="min-width: 60px;">
           <td>{{char.codePoint}}: </td>
@@ -49,12 +42,12 @@
     </div>
 </ng-template>
 <ng-template #tableISO>
-  <p class="text-center">Tabela ISO-8859</p>
+  <p class="text-center">{{"learnSection.tableLabels.tableIso" | translate}}</p>
   <div class="my-5" style="overflow-x: auto;">
     <table class="d-flex" style="max-height: 300px;">
       <tr>
-        <td style="min-width: 50px;">Kod</td>
-        <td style="min-width: 50px;">Znak</td>
+        <td style="min-width: 50px;">{{"learnSection.tableLabels.code" | translate}}</td>
+        <td style="min-width: 50px;">{{"learnSection.tableLabels.char" | translate}}</td>
       </tr>
       <tr *ngFor="let char of isoCodes" style="min-width: 60px;">
           <td>{{char.codePoint}}: </td>
@@ -64,12 +57,12 @@
     </div>
 </ng-template>
 <ng-template #tableASCII>
-  <p class="text-center">Tabela ASCII</p>
+  <p class="text-center">{{"learnSection.tableLabels.tableAscii" | translate}}</p>
   <div class="my-5" style="overflow-x: auto;">
     <table class="d-flex" style="max-height: 300px;">
       <tr>
-        <td style="min-width: 50px;">Kod</td>
-        <td style="min-width: 50px;">Znak</td>
+        <td style="min-width: 50px;">{{"learnSection.tableLabels.code" | translate}}</td>
+        <td style="min-width: 50px;">{{"learnSection.tableLabels.char" | translate}}</td>
       </tr>
       <tr  *ngFor="let char of asciiTable" style="min-width: 60px;">
           <td>{{char.codePoint}}: </td>
